Migrating to jdk 10